@@ -139,7 +139,7 @@ public class ListCertificatesController extends AbstractTomcatContainerControlle
       keyStore.load(storeInput, password);
     } catch (IOException e) {
       logger.error("Error loading store file {}", storeFile, e);
-      return Collections.emptyList();
+      return List.of();
     }
 
     List<Cert> certs = new ArrayList<>();
